# agent-memory

./: .dockerignore  .editorconfig  .gitignore  .npmrc  AGENTS-old.md  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  lefthook.yml  package.json  pnpm-lock.yaml  pyproject.toml
.codex/goals/: README.md
.codex/goals/G01-repository-scaffold/: artifacts.txt  goal.yaml  output.schema.json  prompt.md  verify.sh
.codex/goals/G02-local-runtime-memgraph/: artifacts.txt  goal.yaml  prompt.md  verify.sh
.codex/goals/G03-core-actr-domain-math/: artifacts.txt  goal.yaml  prompt.md  verify.sh
.codex/goals/G04-memgraph-schema-repository/: artifacts.txt  goal.yaml  prompt.md  verify.sh
.codex/goals/G05-retrieval-pipeline/: artifacts.txt  goal.yaml  prompt.md  verify.sh
.codex/goals/G06-session-buffer-semantics/: artifacts.txt  goal.yaml  prompt.md  verify.sh
.codex/goals/G07-production-rule-engine/: artifacts.txt  goal.yaml  prompt.md  verify.sh
.codex/goals/G08-http-api-wiring/: artifacts.txt  goal.yaml  prompt.md  verify.sh
.codex/goals/G09-tests-benchmarks/: artifacts.txt  goal.yaml  output.schema.json  prompt.md  verify.sh
.codex/goals/G10-observability-security-config/: artifacts.txt  goal.yaml  prompt.md  verify.sh
.codex/goals/G11-deployment-handoff/: artifacts.txt  goal.yaml  prompt.md  verify.sh
.codex/goals/G12-codex-automation-ci/: artifacts.txt  goal.yaml  prompt.md  verify.sh
.codex/goals/template/: artifacts.txt  goal.yaml  output.schema.json  prompt.md  verify.sh
.codex/skills/nestor-cli/: SKILL.md
.codex/skills/nestor-cli/agents/: openai.yaml
.codex/skills/nestor-cli/references/: cli-tool-use.md  memory-model.md  runtime-and-verification.md
.github/workflows/: ci.yml
benches/: README.md  activation_retrieval.rs
config/prometheus/: prometheus.yml
coverage/: baseline.json
crates/actr-api/: Cargo.toml
crates/actr-api/src/: dto.rs  lib.rs  main.rs  problem.rs  routes.rs  service.rs
crates/actr-api/tests/: http_end_to_end.rs
crates/actr-cli/: Cargo.toml
crates/actr-cli/src/: cli.rs  errors.rs  examples.rs  main.rs  output.rs  values.rs
crates/actr-cli/src/commands/: associate.rs  buffer.rs  chunk.rs  guide.rs  mod.rs  ops.rs  practice.rs  retrieve.rs  rule.rs  serve.rs
crates/actr-cli/tests/: cli_end_to_end.rs  docs_contract.rs
crates/actr-client/: Cargo.toml
crates/actr-client/src/: config.rs  error.rs  http.rs  lib.rs  operations.rs
crates/actr-core/: Cargo.toml
crates/actr-core/src/: activation.rs  chunk.rs  lib.rs
crates/actr-ops/: Cargo.toml
crates/actr-ops/src/: config.rs  health.rs  lib.rs  metrics.rs
crates/actr-rules/: Cargo.toml
crates/actr-rules/src/: engine.rs  lib.rs  rule.rs  utility.rs
crates/actr-session/: Cargo.toml
crates/actr-session/src/: buffers.rs  lib.rs  session.rs
crates/actr-store/: Cargo.toml
crates/actr-store/migrations/: 001_actr_memory_schema.cypher
crates/actr-store/src/: cypher.rs  lib.rs  memgraph.rs  migrations.rs  repository.rs  retrieval.rs
crates/actr-store/tests/: memgraph_live.rs  retrieval_pipeline.rs
crates/nestor-api/: Cargo.toml
crates/nestor-api/src/: dto.rs  lib.rs  main.rs  problem.rs  routes.rs  service.rs
crates/nestor-api/tests/: http_end_to_end.rs  memgraph_runtime.rs
crates/nestor-cli/: Cargo.toml
crates/nestor-cli/src/: cli.rs  docs.rs  errors.rs  examples.rs  main.rs  output.rs  values.rs
crates/nestor-cli/src/commands/: associate.rs  buffer.rs  chunk.rs  consolidate.rs  forget.rs  guide.rs  mod.rs  ops.rs  practice.rs  rehearse.rs  retrieve.rs  rule.rs  serve.rs
crates/nestor-cli/tests/: cli_end_to_end.rs  docs_contract.rs
crates/nestor-client/: Cargo.toml
crates/nestor-client/src/: error.rs  lib.rs  operations.rs
crates/nestor-core/: Cargo.toml
crates/nestor-core/src/: activation.rs  error.rs  production.rs
crates/nestor-ops/: Cargo.toml
crates/nestor-ops/src/: config.rs  health.rs  lib.rs  metrics.rs
crates/nestor-rules/: Cargo.toml
crates/nestor-rules/src/: engine.rs  lib.rs  rule.rs  utility.rs
crates/nestor-session/: Cargo.toml
crates/nestor-session/src/: buffers.rs  lib.rs  session.rs
crates/nestor-store/: Cargo.toml
crates/nestor-store/migrations/: 002_slot_payloads_lifecycle.cypher
crates/nestor-store/src/: cypher.rs  lib.rs  memgraph.rs  memgraph_repository.rs  migrations.rs  repository.rs  retrieval.rs
crates/nestor-store/tests/: memgraph_live.rs  memgraph_repository_live.rs
docs/: agentic-e2e-cli.md  architecture.md  local-model-e2e.md  runbook.md
docs/cli/: README.md  architecture.md  commands.md  output-and-errors.md  progressive-disclosure.md  slots-and-json.md  testing-and-dod.md  testing.md  workflows.md
research/: ACT-R-Engineering-Plan.md  ACT-R-research.md
scripts/: bootstrap-memgraph.sh  check_rust_coverage.py  check_rust_coverage_test.py  demo-lifecycle.sh  demo-retrieval.sh  wait-for-memgraph.sh
tests/integration/: README.md  retrieval_pipeline.rs
tools/: e2e-agentic-memory.mjs
