[workspace]
members = [
    "crates/actr-client",
    "crates/actr-cli",
    "crates/actr-api",
    "crates/actr-core",
    "crates/actr-ops",
    "crates/actr-rules",
    "crates/actr-session",
    "crates/actr-store",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://example.invalid/agent-memory"
rust-version = "1.85"

[workspace.dependencies]
actr-api = { path = "crates/actr-api" }
actr-client = { path = "crates/actr-client" }
actr-core = { path = "crates/actr-core" }
actr-ops = { path = "crates/actr-ops" }
actr-rules = { path = "crates/actr-rules" }
actr-session = { path = "crates/actr-session" }
actr-store = { path = "crates/actr-store" }
axum = "0.8.4"
clap = { version = "4.6.1", default-features = false, features = ["std", "help", "usage", "error-context"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "net", "rt-multi-thread", "time"] }
tower = { version = "0.5.2", features = ["util"] }
criterion = "0.5.1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
dbg_macro = "deny"
todo = "deny"
