[workspace]
members = [
    "crates/nestor-client",
    "crates/nestor-cli",
    "crates/nestor-api",
    "crates/nestor-core",
    "crates/nestor-ops",
    "crates/nestor-rules",
    "crates/nestor-session",
    "crates/nestor-store",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://example.invalid/agent-memory"
rust-version = "1.85"

[workspace.dependencies]
nestor-api = { path = "crates/nestor-api" }
nestor-client = { path = "crates/nestor-client" }
nestor-core = { path = "crates/nestor-core" }
nestor-ops = { path = "crates/nestor-ops" }
nestor-rules = { path = "crates/nestor-rules" }
nestor-session = { path = "crates/nestor-session" }
nestor-store = { path = "crates/nestor-store" }
axum = "0.8.4"
async-trait = "0.1.88"
chrono = { version = "0.4.41", default-features = false, features = ["std"] }
clap = { version = "4.6.1", default-features = false, features = ["std", "help", "usage", "error-context"] }
neo4rs = "0.8.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "net", "rt-multi-thread", "time"] }
tower = { version = "0.5.2", features = ["util"] }
criterion = "0.5.1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
dbg_macro = "deny"
todo = "deny"
