[package]
name = "actr-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
actr-core.workspace = true
actr-ops.workspace = true
actr-rules.workspace = true
actr-session.workspace = true
actr-store.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true

[lints]
workspace = true
