[package]
name = "actr-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "actr-memory"
path = "src/main.rs"

[dependencies]
actr-api.workspace = true
actr-client.workspace = true
actr-ops.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
axum.workspace = true
tower.workspace = true

[lints]
workspace = true
