[package]
name = "actr-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
actr-core.workspace = true
actr-session.workspace = true
actr-rules.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "activation_retrieval"
path = "../../benches/activation_retrieval.rs"
harness = false

[lints]
workspace = true
