[package]
name = "nestor-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
nestor-core.workspace = true
nestor-ops.workspace = true
nestor-rules.workspace = true
nestor-session.workspace = true
nestor-store.workspace = true
async-trait.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true

[lints]
workspace = true
