[package]
name = "nestor-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "nestor"
path = "src/main.rs"

[dependencies]
nestor-api.workspace = true
nestor-client.workspace = true
nestor-ops.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
axum.workspace = true
tower.workspace = true

[lints]
workspace = true
